--- a/index.html
+++ b/index.html
@@ -191,9 +191,9 @@
             <div class="portfolio-box">
                 <img src="./images/project-5.jpg" height="400" width="600">
                 <div class="portfolio-layer">
-                    <h4 style="color: rgb(0, 0, 0);">Honda Site</h4>
+                    <h4 style="color: rgb(0, 0, 0);">Donate Now</h4>
                     <!-- <p>Learning new things from differnt technologies.Create websites in HTML, CSS, and JavaScript</p> -->
-                    <a href="https://github.com/HRO57/honda-site" target="_blank"><i
+                    <a href="https://hro57.github.io/donate-now/" target="_blank"><i
                             class='bx bx-link-external'></i></a>
                 </div>
             </div>
